--- a/learn.html
+++ b/learn.html
@@ -1,7 +1,7 @@
 ---
 layout: learnpage
 title: Learn Moon Settlement Science and Math
-stylesheet: "css/content.nest.sass.css"
+stylesheet: "css/content.css"
 description: "A realistic virtual lunar colony, showing how space
 settlement will affect our future. The technology and science of living
 on the Moon, the challenges and opportunities of low gravity, hard vacuum,
