--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@ comments: true
 
 <header>
 	<div id="Logo" style="margin-left: 60%; margin-right: 10%;">
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards">
+		<img src="img/MoonwardsLogo2018.svg" alt="Moonwards">
 	</div>
 </header>
 <div class="container">
@@ -18,16 +18,6 @@ comments: true
 		</div>
 	</div>
 </section>
-
-
-<aside>
-	<div class="sideDiv">
-		<p>Some of the things we have are standalone and not integrated into the website, for example
-			<a href="tools/engineSearch.html">"Engine Search"</a> a selection tool for rocket engines.</p>
-		<p>The interactive applets we have made can be downloaded from <a href="http://www.moonwards.com/GeoGebra/">www.moonwards.com/GeoGebra/</a>. The directory also contains quite a few that are not on the website yet.</p>
-		<p>We also have some datasets available at <a href="http://www.moonwards.com/json/engines.json">www.moonwards.com/json/engines.json</a> and <a href="http://www.moonwards.com/json/planets.json">www.moonwards.com/json/planets.json</a></p>
-	</div>
-
 
 </div>
 <div class="container">
