put new Gumroad items on index page, remove RSS, add download icons

--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@ image: "img/NewTESS-Stirlings.jpg"
 		<div class="outerDiv">
 		<div class="innerDiv">
 			<div class="pixHeader">
-				<h2>Download the Draft of the Virtual Lunar Town</h2>
-				<p>The structures of the town are done. You can fly around them in this preview. Soon, the full demo will also
-					include being able to walk around using an avatar, chat with others present, and activate objects and media.
+				<h2>Moon Town, Draft #2</h2>
+				<p>Walk around with your avatar to get a feel for the place, or fly for a better view. Live multiplayer
+					play with chat coming soon. Really soon.
 				</p>
 				<table width="95%">
-					<th>
-						<td><a href="downloads/MoonwardsColony-Win.zip" download><h6>Windows</h6></a></td>
-							<td><a href="downloads/MoonwardsColony-Linux.zip" download><h6>Linux</h6></a></td>
-							<td><a href="downloads/MoonwardsColony-OSX.zip" download><h6>Mac</h6></a></td>
-						</th>
+
+					<tr>
+						<th><a class="clearbk" href="downloads/MoonwardsColony-Win.zip" download><h6>Windows</h6></a></th>
+							<th><a class="clearbk" href="downloads/MoonwardsColony-Linux.zip" download><h6>Linux</h6></a></th>
+							<th><a class="clearbk" href="downloads/MoonwardsColony-OSX.zip" download><h6>Mac</h6></a></th>
+						</tr>
+						<tr>
+							<td><a class="clearbk" href="downloads/MoonwardsColony-Win.zip" download><img src="img/Windows-icon.png"></a></td>
+							<td><a class="clearbk" href="downloads/MoonwardsColony-Linux.zip" download><img src="img/Linux-icon.png"></a></td>
+							<td><a class="clearbk" href="downloads/MoonwardsColony-OSX.zip" download><img src="img/Apple-icon.png"></a></td>
+						</tr>
 						</table>
 			</div>
 		</div>
